# ChaiScriptExample

./: CMakeLists.txt  README.md  chaiscript.sublime-project
source/: CMakeLists.txt  ballistics.chai  components.cpp  components.h  glm_bindings.cpp  glm_bindings.h  main.cpp  plot.py  scene.cpp  scene.h  script_engine.cpp  script_engine.h
